--- a/site_pages/A-KO.html
+++ b/site_pages/A-KO.html
@@ -51,6 +51,8 @@
 
 <section class="resource-section"><header><h2><svg class="doodle-icon" viewBox="0 0 64 64"><rect x="12" y="18" width="40" height="28" rx="2"/><path d="M20 24h24M20 32h24M20 40h24"/></svg>Web Languages</h2></header><p>HTML, CSS, and JavaScript fundamentals.</p><a class="btn" data-file="A-KO/WebLanguagesKO.pdf">View PDF</a></section>
 
+    <section class="resource-section"><header><h2><svg class="doodle-icon" viewBox="0 0 64 64"><path d="M20 20c8 8 8 16 0 24M44 20c-8 8-8 16 0 24"/></svg>Programming Languages and Translators</h2></header><p>Low level vs high Level, translators, addressing modes and linkers and loaders </p><a class="btn" data-file="A-KO/ProgTranslatorsKO.pdf">View PDF</a></section>
+
 </div></main>
 
 
