--- a/site_pages/A-topics.html
+++ b/site_pages/A-topics.html
@@ -641,7 +641,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <tr>
             <td>Types of Programming Language</td>
             <td>Low and high level languages, paradigms, procedural vs object-oriented, assembly language and addressing modes</td>
-            <td><a class="pdf-link" onclick="openPdf('A-KO/ProgrammingKO.pdf');return false;">KO</a></td>
+            <td><a class="pdf-link" onclick="openPdf('A-KO/ProgTranslatorsKO.pdf');return false;">KO</a></td>
             <td><a class="pdf-link" onclick="openPdf('A-studynotes/programminglanguages-SN.pdf');return false;">Notes</a></td>
             <td><a class="pdf-link" onclick="openKeywordsModal('Programming Languages & Translators');return false;">Keywords</a></td>
           </tr>
