--- a/site_pages/A-topics.html
+++ b/site_pages/A-topics.html
@@ -262,7 +262,7 @@ document.addEventListener("DOMContentLoaded", function(){
             <td>Input, output and storage</td>
             <td>Input/output devices, RAM, ROM, secondary storage, virtual storage</td>
             <td></td>
-            <td><a class="pdf-link" onclick="openPdf('A-studynotes/inputoutputstorage-SN.pdf');return false;">Notes</a></td>
+            <td><a class="pdf-link" onclick="openPdf('A-studynotes/inputsoutputsstorage-SN.pdf');return false;">Notes</a></td>
             <td><a class="pdf-link" onclick="openKeywordsModal('Computer Hardware');return false;">Keywords</a></td>
           </tr>        </tbody>
       </table>
@@ -528,7 +528,7 @@ document.addEventListener("DOMContentLoaded", function(){
             <td>Web Languages</td>
             <td>HTML, CSS, JavaScript, client/server roles</td>
             <td><a class="pdf-link" onclick="openPdf('A-KO/WebLanguagesKO.pdf');return false;">KO</a></td>
-            <td><a class="pdf-link" onclick="openPdf('A-studynotes/searchengines-SN.pdf');return false;">Notes</a></td>
+            <td><a class="pdf-link" onclick="openPdf('A-studynotes/HTMLCSS-SN.pdf');return false;">Notes</a></td>
             <td><a class="pdf-link" onclick="openKeywordsModal('Web Languages');return false;">Keywords</a></td>
           </tr>
           <tr>
