--- a/site_pages/A-mats.html
+++ b/site_pages/A-mats.html
@@ -25,7 +25,7 @@
   <main>
     <!-- Software Revision Notes -->
     <div class="card">
-      <a href="software-revision.html">
+      <a href="A-mats/software-revision-mat.html">
         <svg class="doodle-icon" viewBox="0 0 24 24">
           <rect x="3" y="4" width="18" height="14" rx="2"/>
           <path d="M3 10h18M8 20h8"/>
@@ -37,7 +37,7 @@
 
     <!-- Computational Methods -->
     <div class="card">
-      <a href="computational-methods.html">
+      <a href="A-mats/computational-methods_mat.html">
         <svg class="doodle-icon" viewBox="0 0 24 24">
           <path d="M4 12h4l2-6 2 12 2-8 2 4h4"/>
           <circle cx="12" cy="12" r="9" style="stroke-dasharray:2 3"/>
