--- a/site_pages/A-booklets.html
+++ b/site_pages/A-booklets.html
@@ -20,15 +20,15 @@
   </header>
 
   <main>
-    <!-- Hardware Revision Notes -->
-    <div class="card">
-      <a href="">
+    <!-- Sofware Revision Notes -->
+      <div class="card">
+      <a href="A-booklets/software-booklet.html">
         <svg class="doodle-icon" viewBox="0 0 24 24">
           <rect x="3" y="4" width="18" height="14" rx="2"/>
           <path d="M3 10h18M8 20h8"/>
         </svg>
-        <h2>Topic</h2>
-        <p>Notes</p>
+        <h2>Software Revision Booklet</h2>
+        <p>Revise operating systems, memory management, and utility software.</p>
       </a>
     </div>
 
