--- a/site_pages/A-mats.html
+++ b/site_pages/A-mats.html
@@ -4,11 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>A-Mats Revision Tools</title>
-  <link rel="stylesheet" href="../../styles.css" />
-  <style>
-    /* Inline fallback in case external CSS fails to load */
-    body { font-family: 'Segoe UI', sans-serif; }
-  </style>
+   <link rel="stylesheet" href="../styles.css">
+
 </head>
 
 <body class="notebook notebook-border notebook-margin">
