--- a/site_pages/G-topics.html
+++ b/site_pages/G-topics.html
@@ -15,7 +15,7 @@
         }
 </style>
     /* -------------------- PDF MODAL -------------------- */
-
+<script>
 function openPdf(path) {
   const modal = document.getElementById("pdfModal");
   const frame = document.getElementById("pdfFrame");
